--- a/app/src/main/res/menu/action_bar_menu_items.xml
+++ b/app/src/main/res/menu/action_bar_menu_items.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/action_kreis"
+          android:title="Kreis"
+          app:showAsAction="never" />
 
-    <item android:id="@+id/action_info"
-          android:icon="@android:drawable/ic_dialog_info"
-          android:showAsAction="always"
-          android:title="@string/menu_item_info"  />
-    
-    <!-- 
-         Wegen showAsActiong="always" wird nur das Icon, 
-         aber nicht der Titel angezeigt.         
-      -->
-           
+    <item android:id="@+id/action_diagonale"
+          android:title="Diagonalen"
+          app:showAsAction="never" />
+
+    <item android:id="@+id/action_dreieck"
+        android:title="Dreieck"
+        app:showAsAction="never" />
+
 </menu>
